<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BCC8C7"
    android:fillViewport="true"
    android:longClickable="false">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        tools:context=".Main">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/appName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/app_name"
                android:textColor="@android:color/black"
                android:textSize="25dp" />

            <TextView
                android:id="@+id/labelLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subtitulo"
                android:textColor="@android:color/black" />

            <Button
                android:id="@+id/btnAcessar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:enabled="false"
                android:onClick="clickLogin"
                android:text="@string/acessar" />

            <TextView
                android:id="@+id/labelBemVindo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:textColor="#000"
                android:textSize="14dp"
                android:textStyle="bold|italic"
                android:gravity="center_horizontal" />

            <LinearLayout
                android:id="@+id/layoutValidacaoTelefone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:visibility="invisible">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/telefone_nao_encontrado"
                    android:textColor="#f00" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:id="@+id/inputTelefone"
                    android:gravity="center_horizontal"
                    android:inputType="phone"
                    android:numeric="integer"
                    android:phoneNumber="true"
                    android:singleLine="true" />

                <Button
                    android:onClick="clickVerificarTelefone"
                    android:id="@+id/button2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/linearLayout2"
                    android:layout_centerHorizontal="true"
                    android:text="@string/verificar" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/copyright" />

    </RelativeLayout>

</ScrollView>